--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 feature-engine = "^1.8.1"
 seaborn = "^0.13.2"
 pooch = "^1.8.2"
+gpytorch = "^1.13"
 
 
 [tool.poetry.group.dev.dependencies]
